styles/styles.css
/* ... */
.jobs-preview li {
    font-size: 20px;
    line-height: 1.6;
}


/* Job List Styling */
.jobs-preview ul {
    list-style: disc;
    padding-left: 20px;
    margin-top: 10px;
}

.jobs-preview li {
    margin-bottom: 10px;
}

.required-skills-section {
  display: grid;
  grid-template-columns: repeat(2, 1fr); /* 2 columns */
  gap: 24px; /* Adjust spacing between items */
  padding: 16px; /* Optional padding */
}

body.management-page {
    background-color: #A6B2A2;
}

.management-page table {
    text-align: center;
    margin: 0 auto;
    padding: 1.2rem;
    flex: 1;
}

.management-page h2 {
    text-align: center;
}

.management-page {
    height: 100%;
}

